// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-data-table-title-bar should not render the actions area if hideDensitySelect is true and there are no slotted elements 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              header
            </h3>
          </ic-typography>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</ic-data-table-title-bar>
`;

exports[`ic-data-table-title-bar should render 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              header
            </h3>
          </ic-typography>
        </slot>
      </div>
      <div class="description-actions">
        <slot name="description"></slot>
        <div class="action-area">
          <ic-select class="density-input" hidelabel="" label="Change density" small="" value="default"></ic-select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ic-data-table-title-bar>
`;

exports[`ic-data-table-title-bar should render the description area if the description is slotted and there is no action area 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              header
            </h3>
          </ic-typography>
        </slot>
      </div>
      <div class="description-actions">
        <slot name="description"></slot>
      </div>
    </div>
  </mock:shadow-root>
  <ic-typography slot="description">
    slotted desc
  </ic-typography>
</ic-data-table-title-bar>
`;

exports[`ic-data-table-title-bar should render with description and metadata 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              header
            </h3>
          </ic-typography>
        </slot>
        <ic-typography variant="subtitle-small">
          metadata
        </ic-typography>
      </div>
      <div class="description-actions">
        <slot name="description">
          <ic-typography variant="body">
            desc
          </ic-typography>
        </slot>
        <div class="action-area">
          <ic-select class="density-input" hidelabel="" label="Change density" small="" value="default"></ic-select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ic-data-table-title-bar>
`;

exports[`ic-data-table-title-bar should render with slotted actions 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              header
            </h3>
          </ic-typography>
        </slot>
      </div>
      <div class="description-actions">
        <slot name="description"></slot>
        <div class="action-area">
          <div class="custom-actions-wrapper">
            <slot name="custom-actions"></slot>
          </div>
          <ic-select class="density-input" hidelabel="" label="Change density" small="" value="default"></ic-select>
          <slot name="primary-action"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <ic-button slot="primary-action">
    1
  </ic-button>
  <ic-button slot="custom-actions">
    2
  </ic-button>
  <ic-button slot="custom-actions">
    3
  </ic-button>
</ic-data-table-title-bar>
`;

exports[`ic-data-table-title-bar should render with slotted header and description 1`] = `
<ic-data-table-title-bar>
  <mock:shadow-root>
    <div class="title-bar-wrapper">
      <div class="header-container">
        <slot name="heading">
          <ic-typography class="heading" variant="h3">
            <h3>
              Title Bar
            </h3>
          </ic-typography>
        </slot>
      </div>
      <div class="description-actions">
        <slot name="description"></slot>
        <div class="action-area">
          <ic-select class="density-input" hidelabel="" label="Change density" small="" value="default"></ic-select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <ic-typography slot="heading">
    slotted header
  </ic-typography>
  <ic-typography slot="description">
    slotted desc
  </ic-typography>
</ic-data-table-title-bar>
`;
